tests/macros/local_variable/unexpected_token.rs
fn main() {
    let name = "name";

    discourse::questions![Input { name; }];
}
